fix spacing

--- a/docs/.vuepress/theme/assets/less/dialtone-docs.less
+++ b/docs/.vuepress/theme/assets/less/dialtone-docs.less
@@ -191,7 +191,7 @@ a.header-anchor {
   padding-right: 0.23em;
   opacity: 0;
 }
-.d-docsite--header, .d-docsite--subheader {
+.d-docsite--header-2, .d-docsite--header-3 {
   &:hover a.header-anchor {
     opacity: 1;
   }
@@ -658,7 +658,7 @@ a.header-anchor {
   }
 }
 
-.d-docsite--unordered-list, .d-docsite--list-element {
+.d-docsite--unordered-list, .d-docsite--list-element, .d-docsite--ordered-list {
   list-style: revert;
 }
 
